Modify contact page with new enrollment info
Updated contact information and added enrollment details.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
       <p class="sub">Menú rápido de contacto y ubicación</p>
 
       <div class="meta">
-        <div><strong>Organización:</strong> UNIDAD EDUCATIVA</div>
-        <div><strong>Teléfono:</strong> 64125354</div>
-        <div><strong>Dirección:</strong> U.E. JUAN PABLO II, LA PAZ, BOLIVIA</div>
+        <div><strong>Recibe Inscripciones en:</strong></div>
+        <div><strong>Inicial</strong></div>
+        <div><strong>Primaria</strong></div>
+        <div><strong>Secundaria</strong></div>
       </div>
 
       <div class="btns">
@@ -50,3 +51,4 @@
   </div>
 </body>
 </html>
+
